--- a/practicas/portafolio/css/estilos.css
+++ b/practicas/portafolio/css/estilos.css
@@ -32,4 +32,67 @@ header .logo .icono {color: #bfbfbf;}
 header .logo p {color: #777777;}
 /* --- END LOGO --- */
 
+/* --- MENU ---*/
+header .menu {
+    padding: 0;
+}
+
+header .menu a {
+    display: block;
+    padding: 0 30px;
+    text-decoration: none;
+    color: #fff;
+}
+
+header .menu a div span {
+    font-weight: 600;
+}
+
+header .menu .color-1 { background: #3da5e2;}
+header .menu .color-2 { background: #005385;}
+header .menu .color-3 { background: #003855;}
+
+header .menu .color-1:hover { background: #1ba0ef;}
+header .menu .color-2:hover { background: #00426a;}
+header .menu .color-3:hover { background: #002d44;}
+/* --- END MENU ---*/
+
+/* --- MEDIAQUERIES --*/
+
+/* Dispositivo xl */
+@media screen and (max-width:1199px) {}
+
+/* Dispositivo lg */
+@media screen and (max-width:991px) {
+    .logo {
+        height: 76px;
+    }
+    .menu {
+        min-height: 76;
+    }
+
+    .menu a {
+        width: 100%;
+    }
+
+    .menu a div {
+        width: 100%;
+    }
+}
+
+/* Dispositivo md */
+@media screen and (max-width:767px) {}
+
+/* Dispositivo sm */
+@media screen and (max-width:575px) {
+    header {
+        margin-top: 0;
+    }
+    header .logo h2, 
+    p {
+        font-size: 12;
+    }
+}
+
+
 
