--- a/practicas/portafolio/css/estilos.css
+++ b/practicas/portafolio/css/estilos.css
@@ -57,6 +57,15 @@ header .menu .color-2:hover { background: #00426a;}
 header .menu .color-3:hover { background: #002d44;}
 /* --- END MENU ---*/
 
+/* SLIDER */
+.slider {
+    margin-bottom: 40px;
+}
+.slider .col {
+    padding: 0;
+}
+/* END SLIDER */
+
 /* --- MEDIAQUERIES --*/
 
 /* Dispositivo xl */
