--- a/practicas/portafolio/css/estilos.css
+++ b/practicas/portafolio/css/estilos.css
@@ -106,6 +106,62 @@ header .menu .color-3:hover { background: #002d44;}
 }
 /* END PORTAFOLIO */
 
+/* ACERCA DE */
+.acerca-de {
+    padding: 30px;
+    margin-top: 40px;
+}
+
+.acerca-de .foto {
+    text-align: center;
+}
+.acerca-de .foto img {
+    margin-bottom: 30px;
+}
+
+.acerca-de .foto .nombre {
+    color: #545454;
+    font-weight: 300;
+    font-size: 18px;
+    letter-spacing: 2px;
+}
+
+.acerca-de .info .titulo {
+    color: #005385;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    font-size: 40px;
+    margin-bottom: 30px;
+}
+
+.acerca-de .info .resumen {
+    letter-spacing: 1px;
+}
+
+.acerca-de .info .label {
+    font-size: 18px;
+    font-weight: 600;
+    color: #005385;
+    margin-bottom: 10px;
+}
+
+.acerca-de .info .progress {
+    background: #005385;
+    border-radius: 0%;
+    margin-bottom: 15px;
+    height: 25;
+}
+
+.acerca-de .info .progress .progress-bar {
+    background: #3da5e2;
+    line-height: 25px;
+    text-align: left;
+    padding-left: 20px;
+}
+
+
+/* END ACERCA DE */
+
 
 
 
