--- a/practicas/dashboard/css/fontello.css
+++ b/practicas/dashboard/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?19253989');
-  src: url('../font/fontello.eot?19253989#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?19253989') format('woff2'),
-       url('../font/fontello.woff?19253989') format('woff'),
-       url('../font/fontello.ttf?19253989') format('truetype'),
-       url('../font/fontello.svg?19253989#fontello') format('svg');
+  src: url('../font/fontello.eot?81277903');
+  src: url('../font/fontello.eot?81277903#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?81277903') format('woff2'),
+       url('../font/fontello.woff?81277903') format('woff'),
+       url('../font/fontello.ttf?81277903') format('truetype'),
+       url('../font/fontello.svg?81277903#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?19253989#fontello') format('svg');
+    src: url('../font/fontello.svg?81277903#fontello') format('svg');
   }
 }
 */
@@ -24,7 +24,7 @@
   font-family: "fontello";
   font-style: normal;
   font-weight: normal;
-  speak: never;
+  speak: none;
  
   display: inline-block;
   text-decoration: inherit;
@@ -55,10 +55,12 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-briefcase:before { content: '\e800'; } /* '' */
-.icon-mail:before { content: '\e801'; } /* '' */
-.icon-user:before { content: '\e802'; } /* '' */
-.icon-dot:before { content: '\e803'; } /* '' */
-.icon-twitter:before { content: '\f309'; } /* '' */
-.icon-facebook:before { content: '\f30c'; } /* '' */
-.icon-instagram:before { content: '\f32d'; } /* '' */
+.icon-home:before { content: '\e800'; } /* '' */
+.icon-users:before { content: '\e801'; } /* '' */
+.icon-cog-alt:before { content: '\e802'; } /* '' */
+.icon-logout:before { content: '\e803'; } /* '' */
+.icon-edit:before { content: '\e804'; } /* '' */
+.icon-ok:before { content: '\e805'; } /* '' */
+.icon-cancel:before { content: '\e806'; } /* '' */
+.icon-flag:before { content: '\e807'; } /* '' */
+.icon-doc-text:before { content: '\f0f6'; } /* '' */
