--- a/practicas/dashboard/css/estilos.css
+++ b/practicas/dashboard/css/estilos.css
@@ -56,3 +56,90 @@ body {
 /* End Menu */
 
 /* End Barra Lateral */
+
+/* Main */
+.main {
+    padding-top: 40px;
+}
+
+.main .columna{
+    padding-left: 40px;
+    padding-right: 40px;
+}
+.main .titulo {
+    color: #262a34;
+    font-size: 25px;
+    font-weight: 500;
+    font-family: 'Roboto',sans-serif;
+    margin-bottom: 20px;
+}
+.main .widget {
+    margin-bottom: 40px;
+}
+/* Widget Nueva Entrada */
+.main .widget form input[type="text"],
+.main .widget form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    font-family: 'Open Sans', sans-serif;
+    border: none;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0,0,0,0.2);
+}
+.main .widget form input[type="text"] {
+    font-weight: 400;
+}
+.main .widget form textarea {
+    height: 400px;
+    min-height: 200px;
+    max-width: 100%;
+    min-width: 100%;
+}
+/* End Widget Nueva Entrada */
+.main .widget form button {
+    background: #0275d8;
+    cursor: pointer;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    border: none;
+    display: inline-block;
+    padding: 10px;
+    width: 200px;
+    border-radius: 3px;
+    transition: all .3s ease;
+}
+.main .widget form button:hover {
+    background: #025aa5;
+}
+/* Widget Estadisticas */
+.main .estadisticas .contenedor {
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0,.2);
+}
+.main .estadisticas .caja {
+    background: #fff;
+    border: 1px solid #e3e3e3;
+    padding: 40px 20px;
+    flex: 1;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+}
+.main .estadisticas .caja h3 {
+    margin-bottom: 10px;
+    color: #35ae6b;
+}
+.main .estadisticas .caja p {
+    color: #a8a8a8;
+    margin-bottom: 0;
+}
+.main .estadisticas .caja:first-child {
+    border-right: none;
+}
+.main .estadisticas .caja:last-child {
+    border-left: none;
+}
+/* End Widget Estadisticas */
+/* End Main */
+
+
