--- a/practicas/dashboard/css/estilos.css
+++ b/practicas/dashboard/css/estilos.css
@@ -140,6 +140,72 @@ body {
     border-left: none;
 }
 /* End Widget Estadisticas */
+
+/* Widget Comentarios */
+.main .comentarios .contenedor {
+    box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.2);
+}
+
+.main .comentarios .comentario {
+    background: #fff;
+    padding: 20px;
+    border-bottom: 1px solid #dfdfdf;
+}
+
+.main .comentarios .comentario .foto {
+    width: 64px;
+    height: 64px;
+    overflow: hidden;
+    margin-right: 20px;
+    border-radius: 100px;
+}
+
+.main .comentarios .comentario .foto a {
+    display: inline-block;
+}
+
+.main .comentarios .comentario .foto img {
+    width: 100%;
+}
+
+.main .comentarios .comentario .texto {
+    flex: 1;
+}
+
+.main .comentarios .comentario .texto .texto-comentario {
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.main .comentarios .comentario .botones button {
+    background: none;
+    cursor: pointer;
+    color: #fff;
+    font-family: 'Roboto',sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    border: none;
+    display: inline-block;
+    padding: 5px 10px;
+    border-radius: 3px;
+    transition: all .3s ease;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+.main .comentarios .comentario .botones .aprobar {background: #35ae6b;}
+.main .comentarios .comentario .botones .eliminar {background: #b74848;}
+.main .comentarios .comentario .botones .bloquear {color: #acacac;}
+
+.main .comentarios .comentario .botones .aprobar:hover {background: #449d44;}
+.main .comentarios .comentario .botones .eliminar:hover {background: #c9302c;}
+.main .comentarios .comentario .botones .bloquear:hover {
+    background: #acacac;
+    color: #fff;
+}
+
+/* End Widget Comentarios */
+
 /* End Main */
 
 
